MonetDB/src/mal/Tests/tst010.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## syntax analysis test for guarded blocks, redo's and leave's
#barrier	L:= 1;
#	#do it
#	leave Z;	# not known in block
#	redo L;
#end 	L;
#	redo L;		# outside block
#	leave X;	# outside block
#	redo A;		# outside block
#barrier X:=1;
#	leave L;	# outside block
#	leave X;
#	redo L;		# outside block
#end	X;
#barrier A:=1;
#	barrier B:= 1;
#		redo A;
#	end	B;
#	barrier C:=1;
#		leave A;
#	end 	C;
#
#	end	B;	# out of order
#	end	F;	# unknown
#
#	barrier D:=1;
#		leave D;
#		redo  D;  # dead code
#	end	D;
#	barrier D:=2;		# duplicate block
#	end	D;
#end	A;
#barrier  unfinished:= 1;
#	f:=1;
#
!ERROR: label 'Z' not in guarded block in main[2]
!ERROR: label 'L' not in guarded block in main[5]
!ERROR: label 'X' not in guarded block in main[6]
!ERROR: label 'A' not in guarded block in main[7]
!ERROR: label 'L' not in guarded block in main[9]
!ERROR: label 'L' not in guarded block in main[11]
!ERROR: end-label 'B' doesnot match 'A' in main[20]
!ERROR: end-label 'F' without begin-label inmain[21]
!ERROR: begin-label 'unfinished' without end-label in main
function Admin.main():int;	#0:(main:int)
barrier	L := 1;	#1:(L:int)<-($2:int)
	leave Z;	#2:(Z:any)
	redo L ;	#3:(L:int)
end	L;	#4:(L:int)
	redo L ;	#5:(L:int)
	leave X;	#6:(X:int)
	redo A ;	#7:(A:int)
barrier	X := 1;	#8:(X:int)<-($2:int)
	leave L;	#9:(L:int)
	leave X;	#10:(X:int)
	redo L ;	#11:(L:int)
end	X;	#12:(X:int)
barrier	A := 1;	#13:(A:int)<-($2:int)
barrier	B := 1;	#14:(B:int)<-($2:int)
	redo A ;	#15:(A:int)
end	B;	#16:(B:int)
barrier	C := 1;	#17:(C:int)<-($2:int)
	leave A;	#18:(A:int)
end	C;	#19:(C:int)
end	B;	#20:(B:int)
end	F;	#21:(F:str)
barrier	D := 1;	#22:(D:int)<-($2:int)
	leave D;	#23:(D:int)
	redo D ;	#24:(D:int)
end	D;	#25:(D:int)
barrier	D := 2;	#26:(D:int)<-($10:int)
end	D;	#27:(D:int)
end	A;	#28:(A:int)
barrier	unfinished := 1;	#29:(unfinished:int)<-($2:int)
	f := 1;	#30:(f:int)<-($2:int)
end function;	#31:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors
>